kubernetes/apps/default/nginx/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-site
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: www.${SECRET_DOMAIN}
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "${SECRET_DOMAIN}"
        - "www.${SECRET_DOMAIN}"
      secretName: "web-tls"
  rules:
    # - host: "${SECRET_DOMAIN}"
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: nginx-site
    #             port:
    #               number: 8080
    - host: "www.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-site
                port:
                  number: 8080
